# rustprobe

./: .gitignore  Cargo.toml  README.md
android/: README.md  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/rustprobe/app/: AppInventory.kt  AttributionStats.kt  CaptureStats.kt  ConnectionOwnerResolver.kt  ForwardingObservationRecorder.kt  InstalledAppInfo.kt  LocalSocks5Service.kt  MainActivity.kt  MonitoringPreferences.kt  MonitoringSelection.kt  OwnerResolutionTrace.kt  PendingOwnerQuery.kt  RustBridge.kt  RustProbeVpnService.kt
android/app/src/main/jni/: Android.mk  Application.mk
android/app/src/main/jni/hev-socks5-server/: .rev-id  Android.mk  build.mk
android/app/src/main/jni/hev-socks5-tunnel/: .rev-id  Android.mk
android/app/src/main/jni/hev-socks5-tunnel/src/: hev-socks5-tunnel.c
android/app/src/main/res/values/: strings.xml  themes.xml
android/scripts/: build-rust-android.sh
crates/rustprobe-app/: Cargo.toml
crates/rustprobe-app/src/: main.rs
crates/rustprobe-attrib/: Cargo.toml
crates/rustprobe-attrib/src/: lib.rs
crates/rustprobe-capture/: Cargo.toml
crates/rustprobe-capture/src/: lib.rs
crates/rustprobe-core/: Cargo.toml
crates/rustprobe-core/src/: actor.rs  config.rs  event.rs  lib.rs  model.rs
crates/rustprobe-detect/: Cargo.toml
crates/rustprobe-detect/src/: lib.rs
crates/rustprobe-ffi/: Cargo.toml
crates/rustprobe-ffi/src/: lib.rs
crates/rustprobe-flow/: Cargo.toml
crates/rustprobe-flow/src/: lib.rs
crates/rustprobe-ipc/: Cargo.toml
crates/rustprobe-ipc/src/: lib.rs
crates/rustprobe-metrics/: Cargo.toml
crates/rustprobe-metrics/src/: lib.rs
crates/rustprobe-parse/: Cargo.toml
crates/rustprobe-parse/src/: lib.rs
crates/rustprobe-store/: Cargo.toml
crates/rustprobe-store/src/: lib.rs
docs/: android-apk-build.md  architecture.md  next-step-plan.md  rust-replacement-roadmap.md  threat-detection-plan.md
samples/: README.md
ui/: README.md  index.html  package.json
ui/src/: main.ts
