[workspace]
members = [
    "crates/rustprobe-app",
    "crates/rustprobe-attrib",
    "crates/rustprobe-capture",
    "crates/rustprobe-core",
    "crates/rustprobe-detect",
    "crates/rustprobe-ffi",
    "crates/rustprobe-flow",
    "crates/rustprobe-ipc",
    "crates/rustprobe-metrics",
    "crates/rustprobe-parse",
    "crates/rustprobe-store",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
rayon = "1.11"
pnet = "0.35"
jni = "0.21"
libc = "0.2"
aes = "0.8"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
