[package]
name = "rustprobe-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
rustprobe-attrib = { path = "../rustprobe-attrib" }
rustprobe-core = { path = "../rustprobe-core" }
rustprobe-flow = { path = "../rustprobe-flow" }
rustprobe-metrics = { path = "../rustprobe-metrics" }
rustprobe-parse = { path = "../rustprobe-parse" }
rustprobe-store = { path = "../rustprobe-store" }
