[package]
name = "rustprobe-parse"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
pnet.workspace = true
aes.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
rustprobe-core = { path = "../rustprobe-core" }
